<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_splash"> <!-- Changed Start Destination -->

    <fragment
        android:id="@+id/nav_splash"
        android:name="com.citu.ukayearn.ui.screens.auth.SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_splash"
            app:popUpToInclusive="true" /> <!-- This prevents the user from hitting "back" to the splash screen -->
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.citu.ukayearn.ui.screens.auth.LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.citu.ukayearn.ui.screens.home.HomeFragment"
        android:label="@string/catalog"
        tools:layout="@layout/fragment_home" >
        <action
        android:id="@+id/action_home_to_details"
        app:destination="@id/nav_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_details"
        android:name="com.citu.ukayearn.ui.screens.home.ProductDetailsFragment"
        tools:layout="@layout/fragment_product_details">
        <argument
            android:name="productId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.citu.ukayearn.ui.screens.home.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop">
        <argument
            android:name="storeId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_shop_dashboard"
        android:name="com.citu.ukayearn.ui.screens.home.ShopDashboardFragment"
        android:label="@string/shops_dashboard"
        tools:layout="@layout/fragment_shop_dashboard" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.citu.ukayearn.ui.screens.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cart_to_details"
            app:destination="@id/nav_details" />
        <action
            android:id="@+id/action_cart_to_checkout"
            app:destination="@id/nav_checkout" />
    </fragment>

    <fragment
        android:id="@+id/nav_checkout"
        android:name="com.citu.ukayearn.ui.screens.cart.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_checkout" />

    <fragment
        android:id="@+id/nav_haggle"
        android:name="com.citu.ukayearn.ui.screens.haggle.HaggleFragment"
        android:label="@string/haggle"
        tools:layout="@layout/fragment_haggle" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.citu.ukayearn.ui.screens.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

</navigation>
