<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_confirm_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/edit_delivery_address"
        android:textColor="@color/earth_forest"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etDialogDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/chat_input_bg"
        android:hint="@string/delivery_address"
        android:inputType="textPostalAddress"
        android:paddingHorizontal="14dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/text_muted" />

    <EditText
        android:id="@+id/etDialogPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/chat_input_bg"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingHorizontal="14dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/text_muted" />

    <EditText
        android:id="@+id/etDialogLandmark"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/chat_input_bg"
        android:hint="@string/landmark"
        android:inputType="text"
        android:paddingHorizontal="14dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/text_muted" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeliveryCancel"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_outline"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/earth_leaf" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeliverySave"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gradient_primary"
            android:text="@string/save_address"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
